--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "description": "Game Eninge Like Scrach",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "yarn tsc && node ./dist/main.js"
   },
   "repository": {
     "type": "git",
@@ -19,5 +20,8 @@
   "dependencies": {
     "crypto-js": "^4.1.1",
     "typescript": "^4.9.4"
+  },
+  "devDependencies": {
+    "@types/crypto-js": "^4.1.1"
   }
 }
